Trying to make all instances of Base64 org.apache.axis.encoding.Base64 for consistency.